Working first outline of Dockerfile

--- a/dht/Dockerfile
+++ b/dht/Dockerfile
@@ -1,9 +1,10 @@
-#Dockerfile for dht-package
+#Dockerfile for building images of dht-folder, including the node package and main
 
 #FROM <base-image>:<tag>
+
 #Debian system with Go installed, copies the package source, fetches application dependencies, builds the program, and configures it to run on startup
-FROM golang:on build
+
+FROM golang:onbuild
 
 #Tell the container to listen on ports
 EXPOSE 8080
-
